fix spacing/sizing

--- a/maskiminigames/src/styles/Homepage.css
+++ b/maskiminigames/src/styles/Homepage.css
@@ -8,8 +8,17 @@
   background: url('../assets/background_tile.png') repeat;
   background-color: #09002e;
   background-size: auto;
-  text-align: center;
-  font-family: Arial, sans-serif;
+}
+
+.button {
+  display: inline-block;
+  width: 300px;
+  height: 205px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  position: relative;
 }
 
 .snake-button {
@@ -18,19 +27,6 @@
 
 .endless-racing-button {
   background-image: url('../assets/endless_racing_button.png');
-}
-
-.button {
-  display: inline-block;
-  width: 300px; /* Match the desired button size */
-  height: 205px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-  text-decoration: none; /* Remove link underline */
-  color: transparent; /* Ensure no visible text, even if the span is there */
-  position: relative; /* Needed if absolutely positioning child elements */
 }
 
 .buttons {
@@ -45,7 +41,7 @@
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 680px) {
   .buttons {
     flex-direction: column;
     gap: 50px;
@@ -58,7 +54,7 @@
 @media (max-width: 310px) {
   .button {
     width: 95vw;
-    height: 61vw;
+    height: 64vw;
   }
 }
 
